--- a/index.html
+++ b/index.html
@@ -31,33 +31,36 @@
         </div>
         <!--End header-->
         <div id="content">
-            <p class="bigtxt"></p>
-            <p></p>
+            <div class="firstelement">
+                <p class="bigtxt">Services we provide</p>
+            <p class="second-txt">We are working with both individuals and businesses from all over the globe to create awesome websites and applications.</p>
+            </div>
+            
             <div class="elements">
                 <img src="img/branding.jpg" alt="">
-                <p>branding</p>
-                <p></p>
+                <p class="p">branding</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
             </div>
             <div class="elements">
                 <img src="img/lapiz.jpg" alt="">
-                <p>desing</p>
-                <p></p>
+                <p class="p">desing</p>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem </p>
             </div>
             <div class="elements">
                 <img src="img/tools.jpg" alt="">
-                <p>development</p>
-                <p></p>
+                <p class="p">development</p>
+                <p>At vero eos et accusamus et iusto odio dignissimos qui blanditiis praesentium.</p>
             </div>
             <div class="elements">
                 <img src="img/4.jpg" alt="">
-                <p>rocket space</p>
-                <p></p>
+                <p class="p">rocket space</p>
+                <p>Et harum quidem rerum est et expedita distinctio. Nam libero tempore.</p>
             </div>
         </div>
         <!--End content-->
         <div id="footer">
-            <p class="bigtxt"></p>
-            <p></p>
+            <p class="bigtxt">GET IN TOUCH</p>
+            <p>1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111</p>
       
             <form action="">
                 <label>Your name</label>
