footer desde cero, en proceso

--- a/index.html
+++ b/index.html
@@ -64,17 +64,21 @@
             <p>1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111</p>
             <div class="form">
                 <form action="">
-                  <label>Your name</label> 
-                  <textarea></textarea>
-                  <label>Your Email</label>
-                  <textarea></textarea>
-                  <label>Your Message</label>
-                  <textarea class="last-textarea"></textarea>
-                  <button class="buttons">send message</button>
+                    <div class="elementsChildren">
+                      <label>Your name</label> 
+                      <textarea></textarea>
+                    </div>
+                    <div class="elementsChildren">
+                      <label>Your Email</label>
+                      <textarea></textarea>  
+                    </div>
+                    <div class="elementschildren2">
+                       <label>Your Message</label>
+                       <textarea class="last-textarea"></textarea>         
+                    </div>
+                    <button class="buttons">send message</button>
                 </form>
             </div>
-            
-            
         </div>
         <div class="links">
             <a href="#">Facebook</a>
