--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#">blog</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
-            <div class="txt-btn">
+            <div class="txt-btn clearfix">
                 <h3>Hi there! We are the new kids on the block 
                 and we build awesome websites and mobile apps.</h3>
                 <p>Hi there! We are the new kids on the block and we build awesome websites and mobile apps.</p>
@@ -53,26 +53,31 @@
                 <p>Et harum quidem rerum est et expedita distinctio. Nam libero tempore.</p>
             </div>
         </div>
-
         <!--End content-->
         <div id="footer">
-            <p class="bigtxt">get in touch</p>
+            <p class="bigtxt clearfix">get in touch</p>
             <p>1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111</p>
             <div class="form">
                 <form action="">
                     <div class="elementsChildren">
-                      <label>Your name</label> 
-                      <textarea></textarea>
+                        <div class="label"><label>Your name</label>
+                        </div>
+                        <div class="input"><input type="text" id="name" />
+                        </div>
                     </div>
                     <div class="elementsChildren">
-                      <label>Your Email</label>
-                      <textarea></textarea>  
+                        <div class="label">
+                            <label>Your Email</label>
+                        </div>
+                        <div class="input">
+                            <input type="text" id="email" />
+                        </div>
                     </div>
-                    <div class="elementschildren2">
-                       <label>Your Message</label>
-                       <textarea class="last-textarea"></textarea>         
+                    <div class="elementschildren2 clearfix">
+                    <label >Your Message</label>
+                    <textarea class="last-textarea"></textarea>       
                     </div>
-                    <button class="buttons button2">send message</button>
+                    <button class="buttons button2">send message</button> 
                 </form>
             </div>
         </div>
