arreglo form y footer

--- a/index.html
+++ b/index.html
@@ -54,42 +54,43 @@
             </div>
         </div>
         <!--End content-->
-        <div id="footer">
+        <div id="footer" class="clearfix">
             <p class="bigtxt clearfix">get in touch</p>
             <p>1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111</p>
             <div class="form">
                 <form action="">
-                    <div class="elementsChildren">
-                        <div class="label"><label>Your name</label>
+                    <div class="elementsForm">
+                        <div><label>Your name</label>
                         </div>
                         <div class="input"><input type="text" id="name" />
                         </div>
                     </div>
-                    <div class="elementsChildren">
-                        <div class="label">
+                    <div class="elementsForm">
+                        <div>
                             <label>Your Email</label>
                         </div>
                         <div class="input">
                             <input type="text" id="email" />
                         </div>
                     </div>
-                    <div class="elementschildren2 clearfix">
-                    <label >Your Message</label>
-                    <textarea class="last-textarea"></textarea>       
+                    <div class="elementsForm2 clearfix">
+                    <di class="label"><label>Your Message</label></div>
+                    <div class="clearfix"><textarea class="last-textarea"></textarea></div>       
                     </div>
                     <button class="buttons button2">send message</button> 
                 </form>
             </div>
+            <div class="links">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Google+</a>
+                <a href="#">Linkedin</a>
+                <a href="#">Behance</a>
+                <a href="#">Dribbble</a>
+                <a href="#">Github</a>
+            </div>
         </div>
-        <div class="links">
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Google+</a>
-            <a href="#">Linkedin</a>
-            <a href="#">Behance</a>
-            <a href="#">Dribbble</a>
-            <a href="#">Github</a>
-        </div>
+
 
         <!--End footer-->
     </div>
